Bug Fixes; Mobile Fixes; Pre-Category-Linkage. This morning I have been continuing my bug fixes and other little fixes (which there are a lot to do), before I get into the cateogry linkage. Sadie did send over the linkage list, so I figured I would use this stopping point as a good reason to segway into that. But I'll explain all the fixes included here. First off, I darkened the category slider icons (the category icons on the home page and cateogry pages), and I also darkened the borders a little to try and make them match. We can probably play with this more, but i just wanted to darken it up a little to make it more visible. I also resized the logo as we had discussed, because it was off center due to the TM. I added the left padding, but the current logo lines up really nicely on that left edge, and it just didn't look right with it padded over 15 pixels. So, what I did, is have it so it loaded the visually centered logo for the mobile site (which is center aligned), and kept the original on the desktop version. I think this worked really well actually, and both look pretty damn good in my opinion. Since I was in the mobile site anyway, I decided to make a few fixes there. I fixed the footer, which just had to change some borders, i set them to center the text, and added some padding. The newsletter took some more customizing, but I think i have that looking pretty good. I made the input box rather large, but i think this loooked best. I also fixed up the styles on the category slider on the mobile site. This version has a left and right arrow to toggle thru the list (which does not have functionality currently), but that leaves two icons. So i figured this would be a slider. maybe we can fit a 3rd in there, and move the arrows out more. Not sure, but figured having it styled to at least look nice is a good start. I then moved over to the category page. The products were styling really strangely. So i fixed this. I just centered them up, which is what it was su

--- a/skin/frontend/default/rofcustom/css/cart-checkout.css
+++ b/skin/frontend/default/rofcustom/css/cart-checkout.css
@@ -29,7 +29,7 @@ img, button, input {
 .cart-box {
     min-height: 40px;
     position: relative;
-    background: transparent url('../images/hash-border.png') 0 0 repeat;
+    background: transparent url('../images/hash-border-darker.png?noCache') 0 0 repeat;
     height: auto;
     page-break-after: always;
     page-break-inside: avoid;
@@ -357,7 +357,7 @@ img, button, input {
 
     .checkout-box-login-box {
         width: 240px;
-        background: transparent url('../images/hash-border.png') 0 0 repeat;
+        background: transparent url('../images/hash-border-darker.png?noCache') 0 0 repeat;
         margin: 0 5px 10px;
         padding: 5px;
         float: left;
